modifiedcss  file name

--- a/grid.html
+++ b/grid.html
@@ -3,7 +3,7 @@
         <title>
             Css Grid System
         </title>
-        <link rel="stylesheet" href="grid_css.css">
+        <link rel="stylesheet" href="grid_style.css">
     </head>
     <body>
         <main>
